--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@1,100..900&family=Rancho&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@560&family=Rancho&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
